k8s/pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yolo-service
  namespace: workloads-lab
  labels:
    app: yolo-service
    env: prod
spec:
  containers:
  - name: server
    image: docker.io/ahmadray98/polyai-fursa-yolo:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
