k8s/yolo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo
  namespace: workloads-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yolo
  template:
    metadata:
      labels:
        app: yolo
    spec:
      containers:
      - name: yolo
        image: docker.io/ahmadray98/polyai-fursa-yolo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-svc
  namespace: workloads-lab
spec:
  selector:
    app: yolo
  ports:
  - port: 8080
    targetPort: 8080
