k8s/yolo-frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-frontend-node-port-svc
spec:
  type: NodePort
  selector:
    app: yolo-frontend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
