k8s/yolo-stack.yaml
# Yolo API 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-service
  labels:
    app: yolo-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yolo-service
  template:
    metadata:
      labels:
        app: yolo-service
    spec:
      containers:
      - name: server
        image: docker.io/alonithuji/yolo-service:0.0.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 1000m
            memory: 300Mi
          limits:
            cpu: 1000m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-svc
spec:
  selector:
    app: yolo-service
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
# YoloFrontend 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-frontend
  labels:
    app: yolo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo-frontend
  template:
    metadata:
      labels:
        app: yolo-frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/alonithuji/yolo-frontend:0.0.2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 300m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-frontend-svc
spec:
  selector:
    app: yolo-frontend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
